--- a/src/cardStyle.css
+++ b/src/cardStyle.css
@@ -134,7 +134,7 @@ img {
     margin-bottom: calc(15px + (15px / 2));
   }
   .RespCardList.Break4321 > li:nth-child(4n+1) {
-    margin-left: 15px;
+    margin-left: calc(15px + (15px / 2));
   }
   .RespCardList.Break4321 > li:nth-child(3n+1) {
     margin-left: 0;
